# chat-with-gemini

./: CMakeLists.txt  README.md
src/: conversation.cpp  conversation.hpp  main.cpp
